<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="5dp"
    android:backgroundTint="@color/bg"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_team1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_name1"
            android:layout_width="90sp"
            android:layout_height="35sp"
            android:layout_marginStart="1dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:padding="5dp"
            android:fontFamily="@font/PopMedium"
            android:textSize="15sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_team2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_team1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"

            android:text="@string/team1"

        />

        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/team_name2"
            android:layout_width="90sp"
            android:layout_height="35sp"
            android:layout_marginStart="1dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:padding="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/PopMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_team2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_team1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:text="@string/team2"/>

        <TextView
            android:id="@+id/score_team1"
            android:layout_width="90sp"
            android:layout_height="35sp"
            android:textStyle="bold"
            android:layout_marginStart="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:padding="5dp"
            android:fontFamily="@font/PopRegular"
            android:textSize="23sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_team2"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/img_team1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"

            android:text="@string/_999"/>

        <TextView
            android:id="@+id/score_team2"
            android:layout_width="90sp"
            android:layout_height="35sp"
            android:textStyle="bold"
            android:layout_marginStart="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:padding="5dp"
            android:textSize="23sp"
            android:fontFamily="@font/PopRegular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_team2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_team1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/_888"/>

        <ImageView
            android:id="@+id/img_team2"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>